<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuseumPageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <TextView
        android:id="@+id/button_3d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_3d"
        android:clickable="true"
        android:textColor="@color/logoColor"
        android:textSize="24sp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners"
        android:textStyle="bold"
        >
    </TextView>

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="400dp"
                android:scrollbars="none" />

            <io.github.glailton.expandabletextview.ExpandableTextView
                android:id="@+id/expand_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp"
                android:text="@string/ex_text"
                android:textSize="14sp"
                android:textStyle="normal"
                app:ellipsizeTextColor="@color/black"
                app:expandType="layout"
                app:fontFamily="sans-serif-light"
                app:isUnderlined="true"
                expandableTextView:animDuration="500"
                expandableTextView:collapsedLines="6"
                expandableTextView:isExpanded="false"
                expandableTextView:readLessText="Read less"
                expandableTextView:readMoreText="Read more"
                expandableTextView:textMode="line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/buttonCollections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/museum_colection"
                    android:textAlignment="viewStart"
                    android:textColor="@color/lightGrey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="0dp" />

                <Button
                    android:id="@+id/buttonVisit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/museum_visit"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/lightGrey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="0dp">
                </Button>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:minHeight="200dp">
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>