<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagePiece"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:minHeight="380dp"
                android:scrollbars="none" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@android:drawable/btn_star_big_on"
                    android:backgroundTint="@android:color/transparent"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnPT"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/idiomaPt" />

                <Button
                    android:id="@+id/btnENG"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/idiomaEng" />
            </LinearLayout>


            <io.github.glailton.expandabletextview.ExpandableTextView
                android:id="@+id/expand_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp"
                android:text="@string/ex_text"
                android:textSize="14sp"
                android:textStyle="normal"
                app:ellipsizeTextColor="#050505"
                app:expandType="layout"
                app:fontFamily="sans-serif-light"
                app:isUnderlined="true"
                expandableTextView:animDuration="500"
                expandableTextView:collapsedLines="6"
                expandableTextView:isExpanded="false"
                expandableTextView:readLessText="Read less"
                expandableTextView:readMoreText="Read more"
                expandableTextView:textMode="line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnShowPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/showPlayer"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.exoplayer2.ui.StyledPlayerView
            android:id="@+id/styledPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:surface_type="texture_view"
            app:shutter_background_color="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>